# acg_mcp

./: .env.sample  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: __init__.py  config.py  server.py
src/acg/: __init__.py  db.py  indexer.py  rsvp.py  shi.py  spider.py  ugvp.py  var.py  verifier.py
src/tools/: __init__.py  indexer_tools.py  spider_tools.py  verifier_tools.py
tests/: test_tools.py
